# backend_dev_roadmap

./: .gitignore  README.md
projects/telegram_notification_service/: README.md
projects/telegram_notification_service/sprint_1/: README.md
projects/telegram_notification_service/sprint_1/tasks/task_1/: README.md
projects/telegram_notification_service/sprint_1/tasks/task_1/solution/: script.py
projects/telegram_notification_service/sprint_1/tasks/task_1/solution/todo/: pyproject.toml
projects/telegram_notification_service/sprint_1/tasks/task_1/solution/todo/tests/: test_todo.py
projects/telegram_notification_service/sprint_1/tasks/task_1/solution/todo/todo/: dummy_todo.py  script.py
projects/telegram_notification_service/sprint_1/tasks/task_2/: README.md
projects/telegram_notification_service/sprint_1/tasks/task_2/solution/scheduled_checks/: README.md  pyproject.toml  url_list
projects/telegram_notification_service/sprint_1/tasks/task_2/solution/scheduled_checks/scheduled_checks/: scheduled_checks.py
projects/telegram_notification_service/sprint_1/tasks/task_2/solution/scheduled_checks/scheduled_checks/scripts/: scheduled_checks_launch_script.py  scheduler.py
projects/telegram_notification_service/sprint_1/tasks/task_2/solution/scheduled_checks/tests/: test_scheduled_checks.py
projects/telegram_notification_service/sprint_1/tasks/task_3/: README.md
projects/telegram_notification_service/sprint_1/tasks/task_3/solution/size_checker/: pyproject.toml
projects/telegram_notification_service/sprint_2/: README.md
(+2 files in other folders)
